--- a/estilo.css
+++ b/estilo.css
@@ -107,7 +107,7 @@ header
 	position: relative;
 
 	background: #101010;
-	border-radius: 50px;
+	border-radius: 10%;
 
 	border-style: solid;
 	border-width: 1px;
