--- a/estilo.css
+++ b/estilo.css
@@ -251,7 +251,7 @@ h1
 	text-align: center;
 
 	background: #101010;
-	border-radius: 50px;
+	border-radius: 10%;
 
 	border-style: solid;
 	border-width: 1px;
